# vat

./: MDKdoc  MDKdoc.rst  README.md  vatek_broadcast.c  vatek_encoder.c
MDK/epg/inc/: vatek_config_table.h  vatek_lic_arib_japan.h  vatek_rtcimpl.h
MDK/epg/src/: vatek_bml.c  vatek_pes_stream.c  vatek_rtcimpl.c
MDK/inc/: vatek_api.h  vatek_broadcast_api.h  vatek_define.h  vatek_define_periphral.h  vatek_transform_api.h
MDK/main/inc/: vatek_capture.h  vatek_encoder.h  vatek_enum.h  vatek_epg.h  vatek_hms.h  vatek_log_table.h  vatek_modulator.h  vatek_psispec_default.h  vatek_psispec_rule.h  vatek_psitable.h  vatek_tsmux.h  vatek_tsp.h  vatek_userdata.h
MDK/main/inc/hal/: halreg_calibration.h  halreg_define.h  halreg_mux.h  halreg_mux.h.bak  halreg_output.h  halreg_playload.h  halreg_rfmixer.h  halreg_stream.h  halservice_base.h  halservice_base.h.bak  halservice_broadcast.h  halservice_broadcast.h.bak  halservice_rescure.h  halservice_transform.h  halservice_transform.h.bak
MDK/main/inc/hal_backup/: hal_common_define.h  hal_usb_bridge.h  hal_usb_device.h
MDK/main/src/: vatek_capture.c  vatek_encoder.c  vatek_encoder_v1.c  vatek_enum.c  vatek_epg.c  vatek_hms.c  vatek_lic_arib_japan.c  vatek_log_table.c  vatek_modulator.c  vatek_psispec_default.c  vatek_psispec_rule.c  vatek_psitable.c  vatek_tsmux.c  vatek_tsmux_v1.c  vatek_tsp.c  vatek_userdata.c  vatek_userdata_v1.c
MDK/main/src/service/: vatek_broadcast.c  vatek_broadcast_v1.c  vatek_transform.c
MDK/peripheral/inc/demod/: demod_AVL68XX.h  demod_LGDT3305.h
MDK/peripheral/inc/phy/: phy_adv7180.h  phy_adv7180_internal.h  phy_adv7182a.h  phy_adv7182a_internal.h  phy_adv7611.h  phy_adv7611_internal.h  phy_ep9351.h  phy_ep9351_internal.h  phy_ep9555e.h  phy_ep9555e_internal.h  phy_h1.h  phy_h1_internal.h  tool_hdmi.h
MDK/peripheral/inc/rf/: rf_r2.h  rf_r2_internal.h  rf_r2_via_vatek.h
MDK/peripheral/inc/tuner/: tuner_MxL603.h  tuner_MxL608.h
MDK/peripheral/src/demod/: demod_AVL68XX.c  demod_LGDT3305.c  vatek_demod.c
MDK/peripheral/src/phy/: phy_adv7180.c  phy_adv7182a.c  phy_adv7611.c  phy_ep9351.c  phy_ep9555e.c  phy_h1.c  tool_hdmi.c  vatek_phy.c
MDK/peripheral/src/rf/: rf_r2.c  rf_r2_via_vatek.c  vatek_rf.c
MDK/peripheral/src/tuner/: tuner_MxL603.c  tuner_MxL608.c  vatek_tuner.c
MDK/project/vatek_broadcast/: .mxproject  vatek_broadcast.ioc
MDK/project/vatek_broadcast/Inc/: main.h  spi.h  stm32f4xx_hal_conf.h  usart.h  usbd_conf.h
MDK/project/vatek_broadcast/MDK-ARM/: startup_stm32f401xc.lst  vatek_broadcast.uvguix.Liszt  vatek_broadcast.uvguix.chester_li  vatek_broadcast.uvguix.hoo84  vatek_broadcast.uvoptx  vatek_broadcast.uvprojx
MDK/project/vatek_broadcast/Src/: gpio.c  i2c.c  main.c  pin_switch_detect.c  spi.c  usart.c
MDK/project/vatek_broadcast_h1/: .mxproject  vatek_broadcast_h1.ioc
MDK/project/vatek_broadcast_h1/Inc/: main.h  stm32f4xx_it.h  usbd_conf.h
MDK/project/vatek_broadcast_h1/MDK-ARM/: startup_stm32f401xc.lst  startup_stm32f401xc.s  vatek_broadcast_h1.uvguix.Liszt  vatek_broadcast_h1.uvoptx  vatek_broadcast_h1.uvprojx
MDK/project/vatek_broadcast_h1/Src/: gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  usart.c  usbd_conf.c  usbd_desc.c
MDK/project/vatek_encoder/: .mxproject  vatek_encoder.ioc
MDK/project/vatek_encoder/Inc/: main.h  stm32f4xx_hal_conf.h  usbd_conf.h
MDK/project/vatek_encoder/MDK-ARM/: startup_stm32f401xc.lst  startup_stm32f401xc.s  vatek_encoder.uvguix.hoo84  vatek_encoder.uvoptx  vatek_encoder.uvprojx
MDK/project/vatek_encoder/Src/: gpio.c  main.c  spi.c  usart.c  usbd_conf.c  usbd_desc.c
MDK/project/vatek_transform/vatek_transform_F407/: .mxproject  vatek_transform_F407.ioc
MDK/sample/inc/: vatek_sample_broadcast.h  vatek_sample_broadcast_via_h1.h  vatek_sample_encoder_via_h1.h  vatek_sample_modulator.h  vatek_sample_transform.h  vatek_sinewave_mode.h
MDK/sample/src/: vatek_sample_broadcast.c  vatek_sample_broadcast_via_h1.c  vatek_sample_broadcast_via_h1_vatek.c  vatek_sample_encoder_via_h1.c  vatek_sample_modulator.c  vatek_sample_transform.c  vatek_sinewave_mode.c
MDK/system/inc/: vatek_porting_gpio.h  vatek_porting_i2c.h  vatek_porting_system.h  vatek_porting_uart.h  vatek_system.h
MDK/system/src/: vatek_porting_gpio.c  vatek_porting_i2c.c  vatek_porting_system.c  vatek_porting_uart.c  vatek_system.c
MDK/tool/inc/: KeypadAddLCD.h  r2_autocalibrate.h  r2_autocalibrate_internal.h  reg_map.h  uart_cmdline.h  vatek_sample_keypad_stm32f401.h  vatek_sample_lcd1602.h
MDK/tool/src/: KeypadAddLCD.c  r2_autocalibrate.c  uart_cmdline.c  vatek_rd_hal.c  vatek_sample_keypad_stm32f401.c  vatek_sample_lcd1602.c
SDK/: CMakeLists.txt  sdk.bridge.code-workspace  sdk.linux.code-workspace  sdk.win.code-workspace
SDK/api/core/: CMakeLists.txt
SDK/api/core/cmake/: core.rc.in
SDK/api/core/inc/: vatek_sdk_bridge.h  vatek_sdk_broadcast.h  vatek_sdk_device.h  vatek_sdk_storage.h  vatek_sdk_transform.h  vatek_sdk_usbmux.h  vatek_sdk_usbstream.h
SDK/api/core/src/: vatek_sdk_base.c  vatek_sdk_bridge.c  vatek_sdk_broadcast.c  vatek_sdk_device.c  vatek_sdk_storage.c  vatek_sdk_transform.c  vatek_sdk_usbmux.c  vatek_sdk_usbstream.c
SDK/api/qt/: CMakeLists.txt
SDK/api/qt/cmake/: qt.rc.in
SDK/api/qt/src/: qtv_chart_base.cpp  qtv_chart_service_chip.cpp  qtv_chart_ui.cpp  qtv_device.cpp  qtv_dtv.cpp  (+26 more)
SDK/extend/obs-vatek/: CMakeLists.txt
SDK/extend/tsduck-vatek/: CMakeLists.txt
SDK/extend/tsduck-vatek/inc/: tsduck_vatek_output.h
SDK/extend/tsduck-vatek/src/: tsduck_vatek_main.cpp  tsduck_vatek_output.cpp
SDK/sample/app_bridge/: CMakeLists.txt  app_bridge.c
SDK/sample/app_broadcast/: CMakeLists.txt  app_broadcast.c
SDK/sample/app_romtool/: CMakeLists.txt  app_romtool.c
SDK/sample/app_stream/: CMakeLists.txt  app_stream.c
docs/: 20231020_V1_Datasheet.docx  20240116_I2C_MEMHAL暫存器讀寫流程.docx  20240123_V1_HALREG.docx  20240123_V1_Scale轉換表.docx  220209_MDK_A.docx  220209_MDK_B.docx  220214_UserGuide.docx  220216_1_3_A Register Map.docx  220216_1_3_B_Register Map.docx  220216_API_A-series_eng.docx  220216_API_B-series_eng.docx  220216_MDK_A.docx
(+788 files in other folders)
